--- a/cars_scrapper/scrapy.cfg
+++ b/cars_scrapper/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = CarsScrapper.settings
+default = cars_scrapper.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = CarsScrapper
+project = cars_scrapper
